Debug menu 22 fails with factory settings #86122

Closed
opened 2021-03-01 11:45:57 +01:00 by Jeroen Bakker · 4 comments
Member

Start blender and set debug value to 22 triggers an assert:

BLI_assert failed: source/blender/draw/intern/draw_manager_profiling.c:171, DRW_stats_reset(), at '(DTP.timer_increment - DTP.end_increment) <= 0 && "You forgot a DRW_stats_group/query_end somewhere!"'

Need to check where that somewhere is referring to :-)

DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset

DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset
DRW_stats_group_start:Workbench
DRW_stats_group_end
DRW_stats_group_start:Overlay
  DRW_stats_group_start:Outlines
  DRW_stats_group_end
DRW_stats_group_end
DRW_stats_reset

Doesn't seem like an issue with the group start/end

Start blender and set debug value to 22 triggers an assert: ``` BLI_assert failed: source/blender/draw/intern/draw_manager_profiling.c:171, DRW_stats_reset(), at '(DTP.timer_increment - DTP.end_increment) <= 0 && "You forgot a DRW_stats_group/query_end somewhere!"' ``` Need to check where that somewhere is referring to :-) ``` DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset DRW_stats_group_start:Workbench DRW_stats_group_end DRW_stats_group_start:Overlay DRW_stats_group_start:Outlines DRW_stats_group_end DRW_stats_group_end DRW_stats_reset ``` Doesn't seem like an issue with the group start/end
Jeroen Bakker self-assigned this 2021-03-01 11:45:57 +01:00
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Author
Member

P2007: (An Untitled Masterwork)

diff --git a/source/blender/draw/intern/draw_manager_profiling.c b/source/blender/draw/intern/draw_manager_profiling.c
index 98a6b2bff00..9bfc8d98fe4 100644
--- a/source/blender/draw/intern/draw_manager_profiling.c
+++ b/source/blender/draw/intern/draw_manager_profiling.c
@@ -151,7 +151,6 @@ void DRW_stats_group_end(void)
 void DRW_stats_query_start(const char *name)
 {
   GPU_debug_group_begin(name);
-  drw_stats_timer_start_ex(name, false);
   drw_stats_timer_start_ex(name, true);
 }
 

is a proposed fix. Seems like two timers were created

[P2007: (An Untitled Masterwork)](https://archive.blender.org/developer/P2007.txt) ``` diff --git a/source/blender/draw/intern/draw_manager_profiling.c b/source/blender/draw/intern/draw_manager_profiling.c index 98a6b2bff00..9bfc8d98fe4 100644 --- a/source/blender/draw/intern/draw_manager_profiling.c +++ b/source/blender/draw/intern/draw_manager_profiling.c @@ -151,7 +151,6 @@ void DRW_stats_group_end(void) void DRW_stats_query_start(const char *name) { GPU_debug_group_begin(name); - drw_stats_timer_start_ex(name, false); drw_stats_timer_start_ex(name, true); } ``` is a proposed fix. Seems like two timers were created

This issue was referenced by ca2044f72b

This issue was referenced by ca2044f72b1023c0df1389af813c36217a67ceca
Author
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86122
No description provided.