Fix T86122: Performance Debug View Viewport Not Working

The performance debug menu isn't used that often anymore as render doc
also show the timings. This patch will make sure that enabling the
performance debug view (21) does not crash blender.