source/blender/draw/intern/draw_manager_profiling.c
@@ -151,7 +151,6 @@ void DRW_stats_group_end(void)
 void DRW_stats_query_start(const char *name)
 {
   GPU_debug_group_begin(name);
-  drw_stats_timer_start_ex(name, false);
   drw_stats_timer_start_ex(name, true);
 }
 
